Archive2/59/5878d80bb85b36/output
main.cpp:18:2: error: expected unqualified-id
}#include <boost/algorithm/string.hpp>
 ^
main.cpp:23:5: error: redefinition of 'main'
int main()
    ^
main.cpp:6:5: note: previous definition is here
int main()
    ^
2 errors generated.
